<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/dialog_background"
    android:padding="16dp"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="12dp">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select Extra Runs"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:gravity="center" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="30dp"
            android:layout_gravity="end"
            android:visibility="gone"
            android:backgroundTint="@color/teal_700"
            android:layout_height="30dp"
            android:background="@drawable/ic_cancel"/>

    </LinearLayout>


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:gravity="center"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_0"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_one"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_1"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_2"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_3"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="gone"
            android:layout_margin="6dp" />

        <Button
            android:id="@+id/btn_four"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_4"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="6dp" />


        <Button
            android:id="@+id/btn_six"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:text="@string/_6"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_margin="6dp" />

    </GridLayout>

</LinearLayout>
